Add live work tracking and Recent Activity section to Overview - track current work in real-time with activity log

--- a/index.html
+++ b/index.html
@@ -187,6 +187,19 @@
                     </div>
                 </div>
 
+                <!-- Recent Activity / Work Log -->
+                <div class="panel activity-panel">
+                    <div class="panel-header">
+                        <h2>📝 Recent Activity</h2>
+                        <button class="btn-small" onclick="dashboard.switchSection('logs')">View All</button>
+                    </div>
+                    <div class="panel-content">
+                        <div id="overviewActivityLog" class="activity-list">
+                            <div class="empty-state">No recent activity</div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Two Column Layout -->
                 <div class="overview-grid">
                     <!-- Left: Just Completed -->
